# X68Sound

./: .gitignore  CMakeLists.txt  ENVIRONMENT_VARIABLES.md  HIRES_AUDIO_FEASIBILITY_JP.md  OPM_QUALITY_IMPROVEMENTS_JP.md  PCM8_QUALITY_IMPROVEMENTS_JP.md  README.md  add_comments.py  fix_comments.py  readme.txt  start_highquality_96kHz.bat  start_standard.bat  start_ultrahighquality_192kHz.bat
X68Sound/: JULIET.CPP  JULIET.H  ROMEO.H  X68Sound.cpp  adpcm.h  c86ctl.h  global.h  lfo.h  mk_vc2008x64.bat  mk_vc2010.bat  mk_vc2019.bat  mk_vc2022.bat  mk_vc2022arm64.bat  mk_vc2022x64.bat  mk_vc6.bat  op.h  opm.h  pcm8.h  x68sound.def  x68sound.h  x68sound.rc
